# resizer

./: .editorconfig  CMakeLists.txt  LICENSE  README.md  package.json
.circleci/: config.yml
image/: CMakeLists.txt
image/include/image/bmp/: defs.h  io.h
image/include/image/config/: assert.h  config.h.in
image/include/image/core/: algorithm.h  image.h  slice.h  type_traits.h
image/src/bmp/: io.cpp
include/config/: config.h.in
resizer-node/: index.js  node_entry_point.cpp
resizer-node-test/: app.js  package.json
scripts/: build_from_scratch.sh  run_tests.sh  test_all.sh
src/: test_cmake.cpp
test_util/: CMakeLists.txt
test_util/include/test_util/: assert.h  demangle.h  to_str.h
test_util/src/: demangle.cpp
tests/: CMakeLists.txt
tests/test1/: CMakeLists.txt  main.cpp
tests/test_bmp_parse/: CMakeLists.txt  main.cpp
tests/test_enum_class/: CMakeLists.txt  main.cpp
tests/test_image/: CMakeLists.txt  main.cpp
tests/test_slice/: CMakeLists.txt  main.cpp
